logs/dbt.log
[0m16:44:19.694653 [debug] [MainThread]: Sending event: {'category': 'dbt', 'action': 'invocation', 'label': 'start', 'context': [<snowplow_tracker.self_describing_json.SelfDescribingJson object at 0xffff9354ce90>, <snowplow_tracker.self_describing_json.SelfDescribingJson object at 0xffff9354cf90>, <snowplow_tracker.self_describing_json.SelfDescribingJson object at 0xffff9354cf10>]}


============================== 16:44:19.699468 | b29e58a4-9ea8-4002-8f9a-0eeedf4818b7 ==============================
[0m16:44:19.699468 [info ] [MainThread]: Running with dbt=1.5.11
[0m16:44:19.699935 [debug] [MainThread]: running dbt with arguments {'printer_width': '80', 'indirect_selection': 'eager', 'write_json': 'True', 'log_cache_events': 'False', 'partial_parse': 'True', 'cache_selected_only': 'False', 'warn_error': 'None', 'fail_fast': 'False', 'version_check': 'True', 'log_path': 'logs', 'debug': 'False', 'profiles_dir': '/home/airflow/.dbt', 'use_colors': 'True', 'use_experimental_parser': 'False', 'no_print': 'None', 'quiet': 'False', 'warn_error_options': 'WarnErrorOptions(include=[], exclude=[])', 'static_parser': 'True', 'introspect': 'True', 'log_format': 'default', 'target_path': 'None', 'send_anonymous_usage_stats': 'True'}
[0m16:44:19.700449 [warn ] [MainThread]: [ConfigFolderDirectory]: Unable to parse dict {'dir': PosixPath('/home/airflow/.dbt')}
[0m16:44:19.700883 [info ] [MainThread]: Creating dbt configuration folder at 
[0m16:44:19.701755 [debug] [MainThread]: Starter project path: /home/airflow/.local/lib/python3.7/site-packages/dbt/include/starter_project
[0m16:44:51.931646 [error] [MainThread]: Encountered an error:
invalid syntax (column.py, line 230)
[0m16:44:51.932668 [error] [MainThread]: Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/dbt/cli/requires.py", line 86, in wrapper
    result, success = func(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/dbt/cli/requires.py", line 71, in wrapper
    return func(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/dbt/cli/main.py", line 475, in init
    results = task.run()
  File "/home/airflow/.local/lib/python3.7/site-packages/dbt/task/init.py", line 307, in run
    self.create_profile_from_target(adapter, profile_name=project_name)
  File "/home/airflow/.local/lib/python3.7/site-packages/dbt/task/init.py", line 173, in create_profile_from_target
    load_plugin(adapter)
  File "/home/airflow/.local/lib/python3.7/site-packages/dbt/adapters/factory.py", line 209, in load_plugin
    return FACTORY.load_plugin(name)
  File "/home/airflow/.local/lib/python3.7/site-packages/dbt/adapters/factory.py", line 58, in load_plugin
    mod: Any = import_module("." + name, "dbt.adapters")
  File "/usr/local/lib/python3.7/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1006, in _gcd_import
  File "<frozen importlib._bootstrap>", line 983, in _find_and_load
  File "<frozen importlib._bootstrap>", line 967, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 677, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 728, in exec_module
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/home/airflow/.local/lib/python3.7/site-packages/dbt/adapters/bigquery/__init__.py", line 4, in <module>
    from dbt.adapters.bigquery.column import BigQueryColumn  # noqa
  File "/home/airflow/.local/lib/python3.7/site-packages/dbt/adapters/bigquery/column.py", line 230
    if existing_nested_column_data_type := nested_column_data_types.get(root_column_name):
                                         ^
SyntaxError: invalid syntax

[0m16:44:51.933256 [debug] [MainThread]: Command `dbt init` failed at 16:44:51.933180 after 32.24 seconds
[0m16:44:51.933542 [debug] [MainThread]: Sending event: {'category': 'dbt', 'action': 'invocation', 'label': 'end', 'context': [<snowplow_tracker.self_describing_json.SelfDescribingJson object at 0xffff93476f90>, <snowplow_tracker.self_describing_json.SelfDescribingJson object at 0xffff9354cfd0>, <snowplow_tracker.self_describing_json.SelfDescribingJson object at 0xffff9354cf50>]}
[0m16:44:51.933837 [debug] [MainThread]: Flushing usage events
